--- a/index.html
+++ b/index.html
@@ -179,5 +179,32 @@
     </div>
     </main>
 
+    <!-- last -->
+    <section class="grid grid-cols-2 gap-5">
+        <div class="bg-slate-200 flex p-4 rounded-2xl shadow-lg ">
+            <img class="h-24 w-22 mt-4 mr-8 ml6" src="icons/house.png" alt="">
+           <div> <h3 class="text-3xl font-semibold mt-4">Find the Perfect Fit</h3>
+            <p class="mt-3">Everybody is different, which is why we
+                offer styles for every body.</p>
+</div>
+        </div>
+        <div class="bg-slate-200 row-span-3 h-auto w-auto">
+            <img src="images/shopping.png" alt="">
+        </div>
+        <div class="bg-slate-200 flex p-4 rounded-2xl shadow-lg ">
+            <img class="h-24 w-22 mt-4 mr-8 ml6" src="icons/box.png" alt="">
+           <div> <h3 class="text-3xl font-semibold mt-4">Free Exchanges</h3>
+            <p class="mt-3">One of the many reasons you can shop
+                with peace of mind.</p>
+</div>
+        </div> 
+        <div class="bg-slate-200 flex p-4 rounded-2xl shadow-lg ">
+            <img class="h-24 w-22 mt-4 mr-8 ml6" src="icons/question.png" alt="">
+           <div> <h3 class="text-3xl font-semibold mt-4">Contact Our Seller</h3>
+            <p class="mt-3">They are here to help you. That's quite literally what we pay them for.</p>
+</div>
+        </div>
+    </section>
+
 </body>
 </html>
